--- a/src/pages/global.css
+++ b/src/pages/global.css
@@ -1,9 +1,62 @@
 @import url("https://fonts.googleapis.com/css2?family=Figtree:wght@300;400;500;600;700;800&display=swap");
 
 * {
-  font-family: "Figtree", sans-serif;
+ /* font-family: "Figtree", sans-serif;*/
 }
 
-body {
-  background-color:#fff !important;
+body{
+  background-color:#1d1e1f;
+}
+
+/*DarkMode*/
+@import url("../styles/output.css");
+.toggleDarkBtn {
+  position: relative;
+  display: inline-block;
+  width: 65px;
+  height: 41px;
+}
+.toggleDarkBtn input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+.slideBtnTg {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #333;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+.slideBtnTg:before {
+  position: absolute;
+  content: "";
+  height: 30px;
+  width: 30px;
+  left: 5px;
+  bottom: 5px;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  background-color: white;
+}
+input:checked + .slideBtnTg {
+  background-color: #1d1e1f;
+}
+input:focus + .slideBtnTg {
+  box-shadow: 1 1 1px #FAFAFA;
+}
+input:checked + .slideBtnTg:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+.slideBtnTg.round {
+  border-radius: 34px;
+}
+.slideBtnTg.round:before {
+  border-radius: 50%;
 }
